# ont_qc_mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  release.yml
docker/igv_snapper/: Dockerfile  build-multiarch.sh
docs/: architecture.md  tool-output-examples.md  tool_output_examples.json  tool_output_examples_summary.json  troubleshooting.md
mcp/: __init__.py  app_server.py  cli_wrappers.py  config.py  flag_schemas.py  parsers.py  plotting.py  schemas.py  server.py  tools.py  utils.py
ont_qc_mcp/: __init__.py  app_server.py  cli_wrappers.py  config.py  flag_schemas.py  igv_batch.py  nanoq_aux.py  parsers.py  plotting.py  schemas.py  stdio_compat.py  threadpool.py  tools.py  utils.py
scripts/: ci-local.sh  mcp_smoke_real.py  with-env.sh
tests/: conftest.py  test_arg_injection.py  test_cache.py  test_concurrency.py  test_edge_cases.py  test_histogram_estimation.py  test_igv_batch.py  test_igv_snapshot.py  test_integration_flags.py  test_mcp_integration.py  test_nanoq_aux.py  test_parsers.py  test_plotting.py  test_protocol_smoke.py  test_qc_parsers.py  test_qc_tools_integration.py  test_utils.py
tests/fixtures/raw/: cramino_haplotag.large.json  nanoq_haplotag.large.json
tests/fixtures/real/: fetch_real_data.py
tests/fixtures/synthetic/: generate_synthetic_data.py  genes_mock.gff3  highdepth.bam  highdepth.bam.bai  highdepth.fa  highdepth.fa.fai  highdepth.sam  invalid.bed  sequencing_summary_mock.txt  tiny.vcf  tiny.vcf.gz.tbi  valid.bed
