[project]
name = "ont-qc-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing QC/EDA helpers for ONT FASTQ/BAM/CRAM inputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "mcp>=0.1.0",
    "anyio>=4,<5",
    "pydantic>=2.6,<3",
    "typer>=0.12,<1",
    "rich>=13,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.6,<0.7",
]
plots = ["matplotlib>=3.8,<4"]
all = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.6,<0.7",
    "matplotlib>=3.8,<4",
]

[project.scripts]
ont-qc-mcp = "ont_qc_mcp.app_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

