[project]
name = "ont-qc-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing QC/EDA helpers for ONT FASTQ/BAM/CRAM inputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ONT QC MCP Maintainers" }]
urls = { "Repository" = "https://github.com/aganezov/ont_qc_mcp", "Issues" = "https://github.com/aganezov/ont_qc_mcp/issues" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp>=0.1.0",
    "anyio>=4,<5",
    "pydantic>=2.6,<3",
    "typer>=0.12,<1",
    "rich>=13,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.6,<0.7",
    "mypy>=1.8,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.6,<3",
]
plots = ["matplotlib>=3.8,<4"]
all = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.6,<0.7",
    "mypy>=1.8,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.6,<3",
    "matplotlib>=3.8,<4",
]

[project.scripts]
ont-qc-mcp = "ont_qc_mcp.app_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ont_qc_mcp*"]
exclude = ["docker*", "tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require external CLI tools",
    "igv_integration: tests that require Docker/Apptainer + IGV container",
]
addopts = "-m 'not integration and not igv_integration'"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
extend-select = ["UP006", "UP007"]
ignore = []

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
show_error_codes = true

