[project]
name = "ont-qc-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing QC/EDA helpers for ONT FASTQ/BAM/CRAM inputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sergey Aganezov", email = "sergeyaganezovjr@gmail.com" }]
urls = { "Repository" = "https://github.com/aganezov/ont_qc_mcp", "Issues" = "https://github.com/aganezov/ont_qc_mcp/issues" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    # Floor pinned to the lowest version verified to expose the server APIs we use
    # (validate_input on call_tool, ReadResourceContents, CallToolResult); <2 guards
    # against a breaking major. The old ">=0.1.0" could resolve to an incompatible 0.x.
    "mcp>=1.13,<2",
    "anyio>=4,<5",
    "pydantic>=2.6,<3",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.6,<0.7",
    "mypy>=1.8,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.6,<3",
]
plots = ["matplotlib>=3.8,<4"]
all = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "ruff>=0.6,<0.7",
    "mypy>=1.8,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.6,<3",
    "matplotlib>=3.8,<4",
]

[project.scripts]
ont-qc-mcp = "ont_qc_mcp.app_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ont_qc_mcp*"]
exclude = ["docker*", "tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so type-checkers see ont_qc_mcp as typed when installed.
ont_qc_mcp = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require external CLI tools",
    "igv_integration: tests that require Docker/Apptainer + IGV container",
]
addopts = "-m 'not integration and not igv_integration'"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
extend-select = ["UP006", "UP007"]
ignore = []

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
show_error_codes = true

# Do not type-check third-party stubs we don't own. Newer numpy ships PEP 695
# `type` aliases in its .pyi files, which mypy rejects under python_version=3.10.
# This only surfaces in CI's fresh install (latest numpy), not in a stale local
# env — the classic unpinned-dependency drift. We never analyze numpy internals.
[[tool.mypy.overrides]]
# `numpy` covers the top-level package stub (numpy/__init__.pyi, where the
# PEP 695 `type` error lives); `numpy.*` covers submodules.
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

